Fix the logic for checking that the correc string was entered by the player (Rock, Paper, or Scissors)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-    
+    <input id="playGame" type="button" value="Play Rock, Paper, Scissors!" onclick="mainLoop();" />
+
 </body>
 </html>
