--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors - via Console!</title>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js" defer></script>
 </head>
 <body>
-    <input id="playGame" type="button" value="Play Rock, Paper, Scissors!" onclick="mainLoop();" />
+    <div class="buttons">
+        <button id="rock">ROCK!</button>
+        <button id="paper">PAPER!</button>
+        <button id="scissors">SCISSORS!</button>
+    </div>
+    <div id="scoreCard">
 
+    </div>
 </body>
 </html>
